# ticket_bot

./: Cargo.toml  discloud.config
src/: main.rs
src/commands/: mod.rs
src/commands/moderator/: setup.rs
src/commands/user/: close_ticket.rs  mod.rs
src/config/: mod.rs
src/database/: mod.rs
src/database/imp/: mod.rs  ticket_conf.rs  ticket_history.rs
src/database/models/: mod.rs
src/events/: mod.rs
src/interactions/: menu_select.rs  mod.rs  ticket_button_actions.rs  ticket_menu.rs
src/utils/: mod.rs
src/utils/components/: mod.rs  ticket.rs  ticket_menu.rs
src/utils/config/: guild_config.rs  mod.rs
