[package]
name = "bot-ticket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.6", features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
], default-features = false }
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
